--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,5 @@
+@import '@fontsource-variable/raleway';
+
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
