--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,7 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-button {
+.button-primary-transition {
   transition:
     color 0.15s ease-in-out,
     background-color 0.15s ease-in-out,
